--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "quickapps-plugins/system",
-    "description": "QuickApps CMS core plugin.",
+    "description": "QuickAppsCMS core plugin.",
     "type": "cakephp-plugin",
     "keywords": ["framework", "cms", "cmf", "quickapps", "plugin"],
     "homepage": "http://quickappscms.org",
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "quickapps/cms": "~2.0"
+        "quickapps/QuickApps": "~2.0"
     },
     "version": "1.0",
     "extra": {
