--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "quickapps-plugins/system",
-    "description": "QuickAppsCMS core plugin.",
+    "description": "QuickAppsCMS core plugin used to handle site configuration and plugin/theme installation interface.",
     "type": "cakephp-plugin",
     "keywords": ["framework", "cms", "cmf", "quickapps", "plugin"],
     "homepage": "http://quickappscms.org",
